# qc_datamet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: fix_canonical_schema.yml  normalize_project_identity.yml
config/: canonical_schema.yaml  data_dictionary.yaml  excel_schema.yaml  pipeline.yaml  qc_rules.yaml  reports.yaml  settings.yaml  stations.yaml  units.yaml  variables.yaml
config/descriptors/: cloud_codes.yaml  cloud_types.yaml  descriptors.yaml  missing_values.yaml  quality_flags.yaml  report_types.yaml  severity_levels.yaml  trend_codes.yaml  units_reference.yaml  visibility_codes.yaml  weather_codes.yaml  wind_codes.yaml
docs/: architecture.md
qc_datamet/: __init__.py
qc_datamet/config/: __init__.py  exceptions.py  loader.py  validators.py
qc_datamet/flags/: __init__.py
qc_datamet/graphics/: __init__.py
qc_datamet/io/: __init__.py
qc_datamet/metadata/: __init__.py
qc_datamet/pipeline/: __init__.py  base_stage.py  pipeline_manager.py  pipeline_state.py
qc_datamet/pipeline/stages/: __init__.py  stage01_discovery.py  stage02_ingestion.py  stage03_structure_validation.py
qc_datamet/preprocessing/: __init__.py
qc_datamet/qc/: __init__.py
qc_datamet/reports/: __init__.py
qc_datamet/utils/: __init__.py  logger.py
tests/: test.ipynb
